--- a/index.html
+++ b/index.html
@@ -128,19 +128,20 @@ Du bist ein KI-Assistent spezialisiert auf die präzise Aufbereitung von Website
 **Anweisungen für Texter (Copy)**
 *(Alle Anweisungen hier MÜSSEN auf Deutsch sein)*
 
-#Seitenbezeichnung_oder_Modulname_1
-* **Position/Element:** [Genaue Beschreibung der Position oder des betroffenen Elements, z.B. "Überschrift Ebene 2 im Hero-Banner", "Textblock unterhalb des Produktbildes 'Produkt X'", "Neuer Textabschnitt im Footer, Spalte 2"]
-* **Aktion:** [Klare Handlungsanweisung, z.B. "Text ändern", "Neuen Text erstellen und einfügen", "Text entfernen", "Textblock gemäß Kundenwunsch neu strukturieren"]
-* **Vom Kunden gelieferter Originaltext / Relevanter Auszug aus Kunden-E-Mail/Datei:**
+#Seitenbezeichnung_oder_Modulname_1  // z.B. #Kursseite_Wechseljahre_Startup
+* **Position/Element:** [Genaue Beschreibung der Position oder des betroffenen Elements, z.B. "Neuer Kursblock", "Aktualisierung Kursbeschreibung"]
+* **Aktion:** [Klare Handlungsanweisung, z.B. "Neuen Kurs mit folgendem Inhalt erstellen", "Bestehenden Kurs 'XYZ' entfernen", "Text für Kursbeschreibung aktualisieren"]
+* **Vom Kunden für diesen spezifischen Aufgabenblock gelieferter Originaltext (VOLLSTÄNDIG für diesen Abschnitt wiedergeben, nicht kürzen):**
     \`\`\`text
-    [Hier den exakten, relevanten Textabschnitt aus der E-Mail des Kunden oder aus der analysierten Datei wiedergeben, der für diese spezifische Anweisung benötigt wird. Bei neuen Texten die vom Kunden gelieferten Stichpunkte oder Rohtexte hier einfügen.]
+    [Gib hier den VOLLSTÄNDIGEN Textblock wieder, den der Kunde für DIESEN spezifischen Kurs/Abschnitt/Änderungswunsch geliefert hat. Wenn der Kunde z.B. eine komplette Kursbeschreibung liefert, muss diese hier vollständig erscheinen.]
     \`\`\`
 * **Zu erstellender/anzupassender Text (Vorschlag oder detaillierte Anweisung basierend auf Original):**
-    [Basierend auf dem "gelieferten Originaltext", formuliere entweder einen konkreten Textvorschlag oder gib eine detaillierte Anweisung, wie der Texter den Text erstellen oder anpassen soll. Wenn der Kunde z.B. nur Stichpunkte liefert, erstelle hier einen ausformulierten Textvorschlag.]
-* **Hinweis für Designer (falls für diesen Textblock relevant):** [Optionaler kurzer Hinweis, falls diese spezielle Textänderung besondere Beachtung durch den Designer erfordert, z.B. "Neuer, langer Textblock wurde erstellt und benötigt Layout-Anpassung und visuelle Integration."]
+    [Basierend auf dem oben vollständig wiedergegebenen "gelieferten Originaltext", formuliere entweder einen konkreten Textvorschlag, gib Anweisungen zur leichten Anpassung oder bestätige, dass der Text so übernommen werden kann. Wenn z.B. der Kunde sagt "hier ist der Text, wenn sie Ergänzungen oder Verbesserungen haben...", gib hier ggf. deinen Verbesserungsvorschlag an.]
+* **Link(s) (falls vom Kunden für diesen Aufgabenblock genannt):** [Alle Links, die der Kunde spezifisch für diesen Kurs/Abschnitt genannt hat.]
+* **Hinweis für Designer (falls für diesen Textblock relevant):** [Optionaler kurzer Hinweis.]
 
-#Seitenbezeichnung_oder_Modulname_2
-* ... (weitere Anweisungen im gleichen Format)
+#Seitenbezeichnung_oder_Modulname_2 // z.B. #Kursseite_Hormon_Selbsttest
+* ... (weitere Anweisungen im gleichen Format für jeden weiteren identifizierten Kurs/Abschnitt)
 
 ---
 **Anweisungen für Designer (Design)**
